<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home_menu_item"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item
            android:id="@+id/nav_play"
            android:title="@string/play_menu_item"
            android:icon="@drawable/ic_play_arrow_black_24dp"/>
        <item
            android:id="@+id/nav_score"
            android:title="@string/score_menu_item"
            android:icon="@drawable/ic_school_black_24dp"/>
        <item
            android:id="@+id/nav_add_question"
            android:title="@string/add_question_menu"
            android:icon="@drawable/ic_add_black_24dp"/>
        <item
            android:id="@+id/nav_infos"
            android:title="@string/infos_menu_item"
            android:icon="@drawable/ic_info_black_24dp"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings_menu_item"
            android:icon="@drawable/ic_menu_manage"/>

    </group>

</menu>
